src/objects/CSM_QI_News__c.object
<CustomObject>
    <description>CSM-QI-CSM News</description>
    <fields>
        <fullName>Announcements__c</fullName>
        <description>ESPSFDCQI-7295</description>
        <label>Announcements</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Published</fullName>
                    <default>true</default>
                    <label>Published</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2738</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CDA</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>OWF</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>SCM</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Assistance__c</fullName>
        <description>ESPSFDCQI-7295</description>
        <label>Need Assistance</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dashboard_Title__c</fullName>
        <label>Dashboard Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Description__c</fullName>
        <description>ESPSFDCQI-7295</description>
        <label>Sales Dashboard</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>News__c</fullName>
        <label>News</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSMS User</fullName>
                </value>
                <value>
                    <fullName>RDS User</fullName>
                </value>
                <value>
                    <fullName>Tech Solutions User</fullName>
                </value>
                <value>
                    <fullName>RWS User</fullName>
                </value>
                <value>
                    <fullName>GMI User</fullName>
                </value>
                <value>
                    <fullName>Marketing User IQVIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Links__c</fullName>
        <description>ESPSFDCQI-7295</description>
        <label>Quick Links</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>ESPSFDCQI-8689</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSM_QI_News</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSM_QI_News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>